# mnncorrect

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  compare-R.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: AutomaticOrder_8hpp_source.html  Doxyfile  MnnCorrect_8hpp.html  MnnCorrect_8hpp__incl.map  MnnCorrect_8hpp__incl.md5  MnnCorrect_8hpp_source.html  Options_8hpp.html  Options_8hpp__dep__incl.map  Options_8hpp__dep__incl.md5  Options_8hpp__incl.map  Options_8hpp__incl.md5  Options_8hpp_source.html  ReferencePolicy_8hpp.html  ReferencePolicy_8hpp__dep__incl.map  ReferencePolicy_8hpp__dep__incl.md5  ReferencePolicy_8hpp_source.html  RobustAverage_8hpp_source.html  annotated.html  average__closest__mnns_8hpp_source.html  classes.html  classmnncorrect_1_1MnnCorrect-members.html  classmnncorrect_1_1MnnCorrect.html  compute_8hpp.html  compute_8hpp__dep__incl.map  compute_8hpp__dep__incl.md5  compute_8hpp__incl.map  compute_8hpp__incl.md5  compute_8hpp_source.html  correct__target_8hpp_source.html  determine__limit_8hpp_source.html  determine__limits_8hpp_source.html  dir_97b9355cda64e7dda42b76289716495b.html  doxygen_crawl.html  files.html  find__mutual__nns_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  (+31 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_7.js  classes_8.js  enums_0.js  files_0.js  files_5.js  files_6.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_1.js  pages_1.js  pages_3.js  searchdata.js  typedefs_0.js  (+10 more)
include/mnncorrect/: AutomaticOrder.hpp  BatchInfo.hpp  CustomOrder.hpp  InputOrder.hpp  IterativeMerger.hpp  MnnCorrect.hpp  Options.hpp  ReferencePolicy.hpp  RobustAverage.hpp  automatic_order.hpp  average_closest_mnns.hpp  compute.hpp  correct_target.hpp  define_merge_order.hpp  define_order.hpp  determine_limit.hpp  determine_limits.hpp  find_batch_neighbors.hpp  find_closest_mnn.hpp  find_local_centers.hpp  find_mutual_nns.hpp  fuse_nn_results.hpp  mnncorrect.hpp  parallelize.hpp  populate_cross_neighbors.hpp  restore_input_order.hpp  restore_order.hpp  robust_average.hpp  utils.hpp
tests/: CMakeLists.txt
tests/R/: .gitignore
tests/R/examples/neurons/: test.R  test_multi.R  test_simple.R
tests/R/examples/pancreas/: test.R  test_multi.R  test_simple.R
tests/R/examples/pbmc/: test.R  test_multi.R  test_simple.R
tests/R/package/: DESCRIPTION  NAMESPACE
tests/R/package/R/: RcppExports.R  correction.R  cpp.R
tests/R/package/src/: Makevars  RcppExports.cpp  compute.cpp  mnn_correct.cpp  robust_average.cpp
tests/R/package/tests/: testthat.R
tests/R/package/tests/testthat/: test-comparison.R  test-robust_average.R
tests/R/pancreas_simple/: mass_test.R
tests/R/pbmc_simple/: mass_test.R
tests/src/: AutomaticOrder.cpp  CustomOrder.cpp  InputOrder.cpp  IterativeMerger.cpp  MnnCorrect.cpp  RobustAverage.cpp  average_closest_mnns.cpp  compute.cpp  correct_target.cpp  custom_parallel.h  define_merge_order.cpp  determine_limits.cpp  find_batch_neighbors.cpp  find_closest_mnn.cpp  find_mutual_nns.cpp  fuse_nn_results.cpp  helper_find_mutual_nns.hpp  order_utils.h  restore_input_order.cpp  restore_order.cpp  robust_average.cpp  utils.cpp  utils.h
